# rpm-builder

./: .gitignore  CMakeLists.txt  Vagrantfile  make_repo.sh  make_rpm.sh
gdal/: CMakeLists.txt
kakadu/: CMakeLists.txt
libexpat/: CMakeLists.txt
libtiff/: CMakeLists.txt
proj/: CMakeLists.txt
sqlite3/: CMakeLists.txt
