cmake_minimum_required (VERSION 3.13)


project(${NAME})


message(STATUS "PACKAGE: ${NAME}, VERSION: ${VERSION}, RELEASE: ${RELEASE}")


foreach(DIR ${DIRS})
  install(DIRECTORY "${INSTALL_DIR}/${DIR}" DESTINATION "." USE_SOURCE_PERMISSIONS)
endforeach()

foreach(FILE ${FILES})
  get_filename_component(DEST ${FILE} DIRECTORY)
  install(PROGRAMS ${FILE} DESTINATION ${DEST})
endforeach()


set(CPACK_GENERATOR "RPM")
set(CPACK_PACKAGE_NAME ${NAME})
set(CPACK_PACKAGE_VERSION ${VERSION})
set(CPACK_PACKAGE_RELEASE ${RELEASE})
set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_PACKAGE_RELEASE}.${CMAKE_SYSTEM_PROCESSOR}")
set(CPACK_PACKAGING_INSTALL_PREFIX ${INSTALL_DIR})
set(CPACK_RPM_PACKAGE_RELOCATABLE TRUE)
set(CPACK_RPM_EXCLUDE_FROM_AUTO_FILELIST_ADDITION
  ${CPACK_PACKAGING_INSTALL_PREFIX}
  ${CPACK_PACKAGING_INSTALL_PREFIX}/bin
  ${CPACK_PACKAGING_INSTALL_PREFIX}/etc
  ${CPACK_PACKAGING_INSTALL_PREFIX}/etc/bash_completion.d
  ${CPACK_PACKAGING_INSTALL_PREFIX}/include
  ${CPACK_PACKAGING_INSTALL_PREFIX}/lib
  ${CPACK_PACKAGING_INSTALL_PREFIX}/lib/python2.7
  ${CPACK_PACKAGING_INSTALL_PREFIX}/lib/python2.7/site-packages
  ${CPACK_PACKAGING_INSTALL_PREFIX}/lib/pkgconfig
  ${CPACK_PACKAGING_INSTALL_PREFIX}/share
  ${CPACK_PACKAGING_INSTALL_PREFIX}/share/man
  ${CPACK_PACKAGING_INSTALL_PREFIX}/share/man/man1
  ${CPACK_PACKAGING_INSTALL_PREFIX}/share/man/man3
  ${CPACK_PACKAGING_INSTALL_PREFIX}/share/doc
  /etc/yum.repos.d
  /usr/lib64/httpd
  /usr/lib64/httpd/modules)


include(CPack)


