cmake_minimum_required (VERSION 3.13)

project (kakadu)
set(VERSION "7.10.2")

set(INSTALL_DIR ".")
file(GLOB libs "/usr/local/lib/libkdu*")
install(PROGRAMS ${libs} DESTINATION "${INSTALL_DIR}/lib")

set(CPACK_GENERATOR "RPM")
set(CPACK_PACKAGE_NAME "kakadu")
set(CPACK_PACKAGE_VERSION ${VERSION})
set(CPACK_PACKAGE_RELEASE 1)
set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_PACKAGE_RELEASE}.${CMAKE_SYSTEM_PROCESSOR}")
include(CPack)
